[gd_scene load_steps=23 format=3 uid="uid://c1h3cc75cwin8"]

[ext_resource type="FontFile" uid="uid://djp7yayy6aac7" path="res://assets/font/Urban Shadow Sans Serif.otf" id="1_mmdvd"]
[ext_resource type="Script" uid="uid://dyc3yi87eg8v5" path="res://world/world.gd" id="1_tcf2h"]
[ext_resource type="PackedScene" uid="uid://bvk5ylsy5av5" path="res://entities/ball.tscn" id="2_4717r"]
[ext_resource type="PackedScene" uid="uid://7f1buaqd348l" path="res://world/boundary_wall.tscn" id="3_4717r"]
[ext_resource type="Texture2D" uid="uid://cksxychilibaw" path="res://assets/ui-pause-button.png" id="3_fn3g3"]
[ext_resource type="Script" uid="uid://c67mhvh7xbja8" path="res://world/level.gd" id="3_mmdvd"]
[ext_resource type="Texture2D" uid="uid://dv7kdcohculf0" path="res://assets/ui-button-paused-pressed.png" id="4_ai45w"]
[ext_resource type="Texture2D" uid="uid://bwj40keyvw0lq" path="res://assets/ui-pause-button-hover.png" id="4_sc4t8"]
[ext_resource type="Texture2D" uid="uid://d37yxvywbrden" path="res://assets/ui-drop-button.png" id="9_4papg"]
[ext_resource type="PackedScene" uid="uid://c3snm6vd8tyum" path="res://ui/score_label.tscn" id="9_fyhu2"]
[ext_resource type="Texture2D" uid="uid://suah6tnbji31" path="res://assets/ui-drop-button-hover.png" id="11_ov2xu"]
[ext_resource type="Texture2D" uid="uid://cgg3ymr331wpc" path="res://assets/ui-drop-button-disabled.png" id="12_mad0u"]

[sub_resource type="Theme" id="Theme_sc4t8"]
default_font = ExtResource("1_mmdvd")
default_font_size = 24

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sc4t8"]
texture = ExtResource("3_fn3g3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mad0u"]
texture = ExtResource("4_ai45w")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ocfjn"]
texture = ExtResource("4_sc4t8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ov2xu"]
texture = ExtResource("3_fn3g3")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fyhu2"]
texture = ExtResource("9_4papg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ysn08"]
texture = ExtResource("9_4papg")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dqqhb"]
texture = ExtResource("11_ov2xu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h8lre"]
texture = ExtResource("12_mad0u")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b2suy"]
texture = ExtResource("11_ov2xu")

[node name="World" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_sc4t8")
script = ExtResource("1_tcf2h")

[node name="HUDUpper" type="Control" parent="."]
z_index = 10
custom_minimum_size = Vector2(0, 120)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HUDUpper"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14117648, 0.08235294, 0.15294118, 1)

[node name="RoundLabel" type="Label" parent="HUDUpper"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -11.0
offset_right = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0.20392157, 0.10980392, 0.15294118, 1)
theme_override_colors/font_outline_color = Color(0.3764706, 0.17254902, 0.17254902, 1)
theme_override_constants/line_spacing = 0
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 96
text = "1"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_trim_flags = 0
justification_flags = 0

[node name="PauseButton" type="Button" parent="HUDUpper"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -48.0
offset_right = 96.0
offset_bottom = 48.0
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_sc4t8")
theme_override_styles/pressed = SubResource("StyleBoxTexture_mad0u")
theme_override_styles/hover = SubResource("StyleBoxTexture_ocfjn")
theme_override_styles/focus = SubResource("StyleBoxTexture_ov2xu")

[node name="Level" type="Control" parent="."]
custom_minimum_size = Vector2(0, 920)
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 1
script = ExtResource("3_mmdvd")

[node name="TopWall" parent="Level" instance=ExtResource("3_4717r")]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2

[node name="LeftWall" parent="Level" instance=ExtResource("3_4717r")]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_vertical = 2
side = 2

[node name="RightWall" parent="Level" instance=ExtResource("3_4717r")]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 0
grow_vertical = 2
side = 3

[node name="BottomWall" parent="Level" instance=ExtResource("3_4717r")]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
is_base_wall = true
side = 1

[node name="Ball" parent="Level" instance=ExtResource("2_4717r")]
position = Vector2(332, 852.00006)

[node name="LaunchTimer" type="Timer" parent="Level"]
wait_time = 0.075

[node name="HUDLower" type="Control" parent="."]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="HUDLower"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14117648, 0.08235294, 0.15294118, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="HUDLower"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="ScoreLabel" parent="HUDLower/HBoxContainer" instance=ExtResource("9_fyhu2")]
unique_name_in_owner = true
layout_mode = 2
text = "00000"
highlight_color = Color(0.9098039, 0.75686276, 0.4392157, 1)
bump_font_size = 110

[node name="DropButton" type="Button" parent="HUDLower/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxTexture_fyhu2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ysn08")
theme_override_styles/hover = SubResource("StyleBoxTexture_dqqhb")
theme_override_styles/disabled = SubResource("StyleBoxTexture_h8lre")
theme_override_styles/focus = SubResource("StyleBoxTexture_b2suy")
disabled = true

[node name="Label2" type="Label" parent="HUDLower/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="base_wall_selected" from="Level/TopWall" to="Level" method="_on_base_wall_selected"]
[connection signal="base_wall_selected" from="Level/LeftWall" to="Level" method="_on_base_wall_selected"]
[connection signal="base_wall_selected" from="Level/RightWall" to="Level" method="_on_base_wall_selected"]
[connection signal="base_wall_selected" from="Level/BottomWall" to="Level" method="_on_base_wall_selected"]
[connection signal="timeout" from="Level/LaunchTimer" to="Level" method="_on_launch_timer_timeout"]
[connection signal="pressed" from="HUDLower/HBoxContainer/DropButton" to="." method="_on_drop_button_pressed"]
